FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20140916:
AUTHOR: tijl@FreeBSD.org

  The installation of *.la files without some form of USES=libtool in the
  port Makefile will now result in a stage-qa error.  Previously this would
  only cause a warning.

  The :keepla argument to USES=libtool is no longer special.  It is now
  only needed if a port uses *.la files at run-time and no longer to fix
  link problems in other ports.

20140901:
AUTHOR: bapt@FreeBSD.org

  Support for pkg_install has been removed
  Note that WITH_PKGNG is now WITH_PKG (still used to define 'devel')
  WITH_PKGNG remains for compatibility
  @stopdaemon support has gone, pkg(8) has a generic mechanism to
  provide the same functionnality

20140901:
AUTHOR: bapt@FreeBSD.org

  Support for NO_STAGE has been removed

20140825:
AUTHOR: antoine@FreeBSD.org

  Support for NOPORTDATA has been removed.

20140809:
AUTHOR: mva@FreeBSD.org

  The Python language bits of the ports framework have been converted
  to USES. Instead of USE_PYTHON, please use USES=python instead.

    USE_PYTHON=yes becomes USES=python
    USE_PYTHON=2.7+ becomes USES=python:2.7+
    USE_PYTHON_BUILD=3.3 becomes USES=python:3.3,build
    ...

  Additionally, several Python specific features have been converted
  to USES-inspired USE_PYTHON=<featureA>,<featureB>.

    USE_PYDISTUTILS becomes USE_PYTHON=distutils
    PYDISTUTILS_AUTOPLIST becomes USE_PYTHON=autoplist
    ...

  Please read the header comments of Uses/python.mk for more details
  about the new and changed bits and pieces. You will find a list of
  deprecated variables and how to replace them in your own ports at
  the end of the header comment.

20140715: